<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amarilloPobre"
    tools:context=".ActitivyDatos">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="117dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="193dp"
        android:layout_height="37dp"
        android:fontFamily="@font/sensation"
        android:text="@string/datosSobreTi"
        android:textColor="@color/negroPuro"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="399dp"
        android:layout_marginTop="63dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            android:minHeight="48dp" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/Genero"
                android:textColor="@color/negroPuro" />

            <RadioButton
                android:id="@+id/rdnHombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/rdnMujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujer" />

            <RadioButton
                android:id="@+id/rdnOtro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otro" />

        </RadioGroup>

        <Spinner
            android:id="@+id/spCiudades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@android:drawable/ic_menu_send"
        app:iconSize="50sp"
        app:iconTint="@color/negroPuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>